revert z-index fix for now.. deal with later

--- a/app/assets/stylesheets/homepage/_intro.scss
+++ b/app/assets/stylesheets/homepage/_intro.scss
@@ -17,7 +17,6 @@ section.intro {
       width: 100%;
       position: absolute;
       background-size: 100%;
-      z-index: -1;
     }
   }
 
